--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@ asignadas. Es hora de simplificar los provesos laborales
 <section>
 <h2>A QUE NOS DEDICAMOS</h2>
 <ul>
-<li><img src="" alt="" /></li>
-<li><img src="" alt="" /></li>
-<li><img src="" alt="" /></li>
+<li><img src="images/laptopcompu.png" alt="" /></li>
+<li><img src="images/celular.png" alt="" /></li>
+<li><img src="images/tablet.png" alt="" /></li>
 </ul>
 </section>
 <section>
 <h2>Nuestro Equipo</h2>
 <ul>
 <li>
-<img src="" alt="" />
+<img src="images/andrés.jpg" alt="Andrés" />
 <h3>Andrés Cubo</h3>
 <p>Diseñador de Productos</p>
 </li>
 <li>
-<img src="" alt="" />
+<img src="images/Carla.jpg" alt="" />
 <h3>Carla Palacios</h3>
 <p>Desarrolladora FrontEnd</p>
 </li>
 <li>
-<img src="" alt="" />
+<img src="images/Mario.jpg" alt="" />
 <h3>Mario Dorado</h3>
 <p>Marketing</p>
 </li>
 <li>
-<img src="" alt="" />
+<img src="images/Pablo.jpg" alt="" />
 <h3>Pablo Mijangos</h3>
 <p>Diseñador IU</p>
 </li>
@@ -96,7 +96,7 @@ asignadas. Es hora de simplificar los provesos laborales
 <footer>
 <a href="">WebStudio</a>
 <address>
-Calz. Ticomán 500, Ciudad de México, CDMX, México
+Calz. Ticomán 500, Ciudad de <br> Mséxico, CDMX, México
 <ul>
 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
