--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ asignadas. Es hora de simplificar los provesos laborales
 <section>
 <h2>A QUE NOS DEDICAMOS</h2>
 <ul>
-<li><img src="images/laptopcompu.png" alt="" /></li>
-<li><img src="images/celular.png" alt="" /></li>
-<li><img src="images/tablet.png" alt="" /></li>
+<li><img src="images/laptopcompu.png" alt="laptopcompu" /></li>
+<li><img src="images/celular.png" alt="celular" /></li>
+<li><img src="images/tablet.png" alt="tablet" /></li>
 </ul>
 </section>
 <section>
