--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@ asignadas. Es hora de simplificar los provesos laborales
 <section>
 <h2>A QUE NOS DEDICAMOS</h2>
 <ul>
-<li><img src="images/laptopcompu.png" alt="laptopcompu" /></li>
-<li><img src="images/celular.png" alt="celular" /></li>
-<li><img src="images/tablet.png" alt="tablet" /></li>
+<li><img src="images/lap.png" alt="laptopcompu" /></li>
+<li><img src="images/celular1.png" alt="celular" /></li>
+<li><img src="images/tablet1.png" alt="tablet" /></li>
 </ul>
 </section>
 <section>
 <h2>Nuestro Equipo</h2>
 <ul>
 <li>
-<img src="images/andrés.jpg" alt="Andrés" />
+<img src="images/andrés1.jpg" alt="Andrés" />
 <h3>Andrés Cubo</h3>
 <p>Diseñador de Productos</p>
 </li>
 <li>
-<img src="images/Carla.jpg" alt="" />
+<img src="images/Carla1.jpg" alt="" />
 <h3>Carla Palacios</h3>
 <p>Desarrolladora FrontEnd</p>
 </li>
 <li>
-<img src="images/Mario.jpg" alt="" />
+<img src="images/Mario1.jpg" alt="" />
 <h3>Mario Dorado</h3>
 <p>Marketing</p>
 </li>
 <li>
-<img src="images/Pablo.jpg" alt="" />
+<img src="images/Pablo1.jpg" alt="" />
 <h3>Pablo Mijangos</h3>
 <p>Diseñador IU</p>
 </li>
